--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="https://codepen.io/shshaw/pen/QmZYMG.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Capitol Hotels and Resorts</title>
+    <title>PH Dreamin'</title>
   </head>
   <body>
     <div id="app"></div>
